--- a/main.html
+++ b/main.html
@@ -30,6 +30,16 @@
       media="only screen and (max-width: 1000px)"
     />
     <title>Document</title>
+        <style>
+     
+      #img-play{
+        transition: all;
+        transition-duration: .2s;
+      }
+      #img-play:hover{
+        width: 88%;
+      }
+    </style>
   </head>
 
   <body style="top: 0; margin: 0;">
@@ -510,7 +520,7 @@
         height: 400px;
         height: 323px;
         top: 35px;
-        left: 39%;
+       
 
         border-radius: 11px;
       "
